update the style to fix the gov shutdown bar overlap issue

--- a/src/pages/landing/landingStyles.css
+++ b/src/pages/landing/landingStyles.css
@@ -2,7 +2,7 @@
   position: absolute;
   width: 906px;
   height: 1200px;
-  margin: auto;
+  margin-top: -180px;
   left: 700px;
   top: 27px;
   right: 0;
